create home screens and add more icons

--- a/fitbook/app/src/main/res/navigation/mobile_navigation.xml
+++ b/fitbook/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.h2a.fitbook.ui.home.HomeFragment"
+        android:name="com.h2a.fitbook.views.fragments.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
