FB-2: create splash, authentication screens and app icon
- Create splash, about, settings and authentication screens (login, sign up) screens
- App Icon:
    - Source: [flaticon fitness](https://www.flaticon.com/premium-icon/fitness_2749673?term=fitness&page=1&position=5&page=1&position=5&related_id=2749673&origin=search)
    - Generate from Image Asset feature of Android Studio.
- Icons:
  - [Info](https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Ainfo%3A)
  - [Logout](https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Alogout%3A)
  - [Settings](https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Asettings%3A)
  - [Arrow forward](https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Aarrow_forward%3A)
  - [Today](https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Atoday%3A)
  - [Google](https://www.flaticon.com/free-icon/google_300221?term=google&page=1&position=1&page=1&position=1&related_id=300221&origin=search#)
- Some color states, string and color constants (resource file), and font family (roboto).
- Utility function: a function to make underline for TextView.

--- a/fitbook/app/src/main/res/layout/activity_drawer.xml
+++ b/fitbook/app/src/main/res/layout/activity_drawer.xml
@@ -21,5 +21,8 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_drawer"
+        app:itemBackground="@drawable/drawer_item_background"
+        app:itemIconTint="@color/drawer_item_foreground"
+        app:itemTextColor="@color/drawer_item_foreground"
         app:menu="@menu/activity_main_drawer" />
 </androidx.drawerlayout.widget.DrawerLayout>
