--- a/fitbook/app/src/main/res/menu/activity_main_drawer.xml
+++ b/fitbook/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
@@ -16,5 +17,17 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/ic_menu_round_info_24"
+            android:title="@string/menu_about" />
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_menu_round_settings_24"
+            android:title="@string/menu_settings" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_menu_round_logout_24"
+            android:title="@string/menu_logout" />
     </group>
 </menu>
