--- a/fitbook/app/src/main/res/navigation/mobile_navigation.xml
+++ b/fitbook/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,16 @@
         android:name="com.h2a.fitbook.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_about"
+        android:name="com.h2a.fitbook.views.fragments.AboutFragment"
+        android:label="@string/menu_about"
+        tools:layout="@layout/fragment_about" />
+
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="com.h2a.fitbook.views.fragments.SettingsFragment"
+        android:label="@string/menu_settings" />
+
 </navigation>
