--- a/fitbook/app/src/main/res/menu/activity_main_drawer.xml
+++ b/fitbook/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,7 +7,8 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_round_home_24"
+            android:iconTint="#000000"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_gallery"
