FB-3 - Complete Heath Management UI
- Visit [FB-3](https://trello.com/c/ppNXZrLW/8-3-ui-heath-management-screen) for more detail.

--- a/fitbook/app/src/main/res/navigation/mobile_navigation.xml
+++ b/fitbook/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.h2a.fitbook.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_health_management"
+        android:name="com.h2a.fitbook.views.fragments.healthmanagement.HealthManagementFragment"
+        android:label="@string/menu_health_management"
+        tools:layout="@layout/fragment_health_management" />
 </navigation>
