--- a/fitbook/app/src/main/res/menu/activity_main_drawer.xml
+++ b/fitbook/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,9 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
+        <item
+            android:id="@+id/nav_health_management"
+            android:icon="@drawable/ic_round_volunteer_activism_24"
+            android:title="@string/menu_health_management" />
     </group>
 </menu>
