FB-5: create statistic screens and make scrollable for sign up form
- Create statistics screen, including two tabs: in date and in week.
- Make scrollable for SignUpActivity.
- Utility function: a function to generate set of colors for chart.
- Some string and array constants (resource file).
- Icons:
  - [Leaderboard](https://fonts.google.com/icons?selected=Material%20Icons%20Outlined%3Aleaderboard%3A)
  - [File download](https://fonts.google.com/icons?selected=Material%20Icons%20Outlined%3Afile_download%3A)
  - [Share](https://fonts.google.com/icons?selected=Material%20Icons%20Outlined%3Ashare%3A)

--- a/fitbook/app/src/main/res/navigation/mobile_navigation.xml
+++ b/fitbook/app/src/main/res/navigation/mobile_navigation.xml
@@ -30,6 +30,12 @@
         tools:layout="@layout/fragment_health_management" />
 
     <fragment
+        android:id="@+id/nav_statistics"
+        android:name="com.h2a.fitbook.views.fragments.statistics.StatisticsFragment"
+        android:label="@string/menu_statistics"
+        tools:layout="@layout/fragment_statistics" />
+
+    <fragment
         android:id="@+id/nav_about"
         android:name="com.h2a.fitbook.views.fragments.AboutFragment"
         android:label="@string/menu_about"
