--- a/fitbook/app/src/main/res/navigation/mobile_navigation.xml
+++ b/fitbook/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,22 +12,16 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.h2a.fitbook.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.h2a.fitbook.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
-
-    <fragment
         android:id="@+id/nav_health_management"
         android:name="com.h2a.fitbook.views.fragments.healthmanagement.HealthManagementFragment"
         android:label="@string/menu_health_management"
         tools:layout="@layout/fragment_health_management" />
+
+    <fragment
+        android:id="@+id/nav_schedule"
+        android:name="com.h2a.fitbook.views.fragments.schedule.ScheduleFragment"
+        android:label="@string/menu_schedule"
+        tools:layout="@layout/fragment_schedule" />
 
     <fragment
         android:id="@+id/nav_about"
