--- a/fitbook/app/src/main/res/values/themes.xml
+++ b/fitbook/app/src/main/res/values/themes.xml
@@ -6,7 +6,8 @@
         <item name="colorPrimaryVariant">@color/primary_dark</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/black</item>  <!-- old: @color/teal_200 | apply black color for title of PreferenceCategory-->
+        <item name="colorSecondary">@color/black
+        </item>  <!-- old: @color/teal_200 | apply black color for title of PreferenceCategory-->
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
