--- a/fitbook/app/src/main/res/layout/fragment_health_management.xml
+++ b/fitbook/app/src/main/res/layout/fragment_health_management.xml
@@ -36,7 +36,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:endIconMode="custom">
@@ -45,6 +45,9 @@
                             android:id="@+id/health_management_et_form_height"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:cursorVisible="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             android:hint="@string/health_management_form_height"
                             android:inputType="numberDecimal"
                             android:maxLines="1" />
@@ -56,7 +59,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:endIconMode="custom">
@@ -65,9 +68,12 @@
                             android:id="@+id/health_management_et_form_weight"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:cursorVisible="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             android:hint="@string/health_management_form_weight"
                             android:inputType="numberDecimal"
-                            android:maxLines="1"/>
+                            android:maxLines="1" />
                     </com.google.android.material.textfield.TextInputLayout>
                 </LinearLayout>
 
@@ -80,7 +86,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:endIconMode="custom">
@@ -89,9 +95,12 @@
                             android:id="@+id/health_management_et_form_age"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:cursorVisible="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             android:hint="@string/health_management_form_age"
                             android:inputType="number"
-                            android:maxLines="1"/>
+                            android:maxLines="1" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <Space
@@ -99,8 +108,9 @@
                         android:layout_height="match_parent" />
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/health_management_til_form_date"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         app:endIconDrawable="@drawable/ic_round_event_24"
@@ -110,7 +120,11 @@
                             android:id="@+id/health_management_et_form_date"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/health_management_form_date" />
+                            android:cursorVisible="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
+                            android:hint="@string/health_management_form_date"
+                            android:inputType="none|textNoSuggestions" />
                     </com.google.android.material.textfield.TextInputLayout>
                 </LinearLayout>
 
@@ -123,7 +137,8 @@
                     android:text="@string/health_management_alert"
                     android:textColor="#856404"
                     android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
@@ -156,6 +171,20 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/health_management_fab_undo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="12dp"
+                android:clickable="true"
+                android:src="@drawable/ic_round_undo_24"
+                android:visibility="invisible"
+                app:backgroundTint="#085B53"
+                app:layout_constraintBottom_toTopOf="@+id/health_management_fab_edit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:tint="#FFFFFF" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/health_management_fab_edit"
