FB-8: implement business logic for login and sign up
* Add UserModel model class to wrap fetched data from firebase.
* Integrate firebase APIs into authentication features such as sign in and sign up. They are written in the LoginViewModel and SignUpViewModel files.
* Add some validation functions to validate user information.
* Integrate pull-to-refresh in statistic screens.

--- a/fitbook/app/src/main/res/values/colors.xml
+++ b/fitbook/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <!-- Other Colors -->
     <color name="background">#00A394</color>
     <color name="app_name_pink">#F76C82</color>
-    <color name="error">#B00020</color>
+    <color name="error">#F44336</color>
     <color name="light_gray">#E5E5E5</color>
     <color name="dark_gray">#8E8E93</color>
     <color name="primary">#085B53</color>     <!-- action bar color -->
