--- a/fitbook/app/src/main/res/layout/activity_sign_up.xml
+++ b/fitbook/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
     tools:context=".views.activities.SignUpActivity">
 
     <ScrollView
@@ -57,6 +56,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/roboto_black"
+                        android:shadowColor="@color/black"
+                        android:shadowRadius="4"
                         android:text="book"
                         android:textAllCaps="true"
                         android:textColor="@color/white"
@@ -79,16 +80,19 @@
 
                 <!-- Full name text field -->
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/sign_up_til_full_name"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/sign_up_text_field_full_name_placeholder"
-                    app:boxBackgroundColor="@color/light_gray"
+                    app:boxBackgroundColor="@color/white"
                     app:boxCornerRadiusBottomEnd="8dp"
                     app:boxCornerRadiusBottomStart="8dp"
                     app:boxCornerRadiusTopEnd="8dp"
                     app:boxCornerRadiusTopStart="8dp"
                     app:boxStrokeColor="@color/text_input_layout_stroke"
+                    app:helperTextEnabled="true"
+                    app:helperTextTextColor="@color/error"
                     app:hintTextColor="@color/black"
                     tools:layout_editor_absoluteX="1dp"
                     tools:layout_editor_absoluteY="136dp">
@@ -118,15 +122,17 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:hint="@string/sign_up_text_field_birthday_placeholder"
-                        app:boxBackgroundColor="@color/light_gray"
+                        app:boxBackgroundColor="@color/white"
                         app:boxCornerRadiusBottomEnd="8dp"
                         app:boxCornerRadiusBottomStart="8dp"
                         app:boxCornerRadiusTopEnd="8dp"
                         app:boxCornerRadiusTopStart="8dp"
                         app:boxStrokeColor="@color/text_input_layout_stroke"
+                        app:helperTextEnabled="true"
+                        app:helperTextTextColor="@color/error"
+                        app:hintTextColor="@color/black"
                         app:endIconDrawable="@drawable/ic_round_today_24"
                         app:endIconMode="custom"
-                        app:hintTextColor="@color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/sign_up_til_gender"
                         app:layout_constraintStart_toStartOf="parent"
@@ -147,14 +153,15 @@
                         android:layout_width="140dp"
                         android:layout_height="wrap_content"
                         android:hint="@string/sign_up_text_field_gender_placeholder"
-                        app:boxBackgroundColor="@color/light_gray"
+                        app:boxBackgroundColor="@color/white"
                         app:boxCornerRadiusBottomEnd="8dp"
                         app:boxCornerRadiusBottomStart="8dp"
                         app:boxCornerRadiusTopEnd="8dp"
                         app:boxCornerRadiusTopStart="8dp"
                         app:boxStrokeColor="@color/text_input_layout_stroke"
+                        app:helperTextEnabled="true"
+                        app:helperTextTextColor="@color/error"
                         app:hintTextColor="@color/black"
-                        app:layout_constraintBottom_toBottomOf="@+id/sign_up_til_birthday"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/sign_up_til_birthday">
 
@@ -174,16 +181,19 @@
 
                 <!-- Username text field -->
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/sign_up_til_username"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/auth_username_text_field_placeholder"
-                    app:boxBackgroundColor="@color/light_gray"
+                    app:boxBackgroundColor="@color/white"
                     app:boxCornerRadiusBottomEnd="8dp"
                     app:boxCornerRadiusBottomStart="8dp"
                     app:boxCornerRadiusTopEnd="8dp"
                     app:boxCornerRadiusTopStart="8dp"
                     app:boxStrokeColor="@color/text_input_layout_stroke"
+                    app:helperTextEnabled="true"
+                    app:helperTextTextColor="@color/error"
                     app:hintTextColor="@color/black"
                     tools:layout_editor_absoluteX="1dp"
                     tools:layout_editor_absoluteY="136dp">
@@ -202,18 +212,21 @@
 
                 <!-- Password text field -->
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/sign_up_til_password"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/auth_password_text_field_placeholder"
-                    app:boxBackgroundColor="@color/light_gray"
+                    app:boxBackgroundColor="@color/white"
                     app:boxCornerRadiusBottomEnd="8dp"
                     app:boxCornerRadiusBottomStart="8dp"
                     app:boxCornerRadiusTopEnd="8dp"
                     app:boxCornerRadiusTopStart="8dp"
                     app:boxStrokeColor="@color/text_input_layout_stroke"
-                    app:endIconMode="password_toggle"
+                    app:helperTextEnabled="true"
+                    app:helperTextTextColor="@color/error"
                     app:hintTextColor="@color/black"
+                    app:endIconMode="password_toggle"
                     tools:layout_editor_absoluteX="1dp"
                     tools:layout_editor_absoluteY="136dp">
 
@@ -232,18 +245,21 @@
 
                 <!-- Confirm password text field -->
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/sign_up_til_confirm_password"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/auth_confirm_password_text_field_placeholder"
-                    app:boxBackgroundColor="@color/light_gray"
+                    app:boxBackgroundColor="@color/white"
                     app:boxCornerRadiusBottomEnd="8dp"
                     app:boxCornerRadiusBottomStart="8dp"
                     app:boxCornerRadiusTopEnd="8dp"
                     app:boxCornerRadiusTopStart="8dp"
                     app:boxStrokeColor="@color/text_input_layout_stroke"
-                    app:endIconMode="password_toggle"
+                    app:helperTextEnabled="true"
+                    app:helperTextTextColor="@color/error"
                     app:hintTextColor="@color/black"
+                    app:endIconMode="password_toggle"
                     tools:layout_editor_absoluteX="1dp"
                     tools:layout_editor_absoluteY="136dp">
 
