--- a/fitbook/app/src/main/res/layout/fragment_statistic_in_date.xml
+++ b/fitbook/app/src/main/res/layout/fragment_statistic_in_date.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:nestedScrollingEnabled="true"
     android:scrollbars="none">
 
     <LinearLayout
@@ -25,7 +26,7 @@
             app:boxCornerRadiusTopEnd="8dp"
             app:boxCornerRadiusTopStart="8dp"
             app:boxStrokeColor="@color/dark_gray"
-            app:hintTextColor="@color/black" >
+            app:hintTextColor="@color/black">
 
             <AutoCompleteTextView
                 android:id="@+id/statistic_in_date_actv_statistic_date"
@@ -51,7 +52,7 @@
             app:boxCornerRadiusTopEnd="8dp"
             app:boxCornerRadiusTopStart="8dp"
             app:boxStrokeColor="@color/dark_gray"
-            app:hintTextColor="@color/black" >
+            app:hintTextColor="@color/black">
 
             <AutoCompleteTextView
                 android:id="@+id/statistic_in_date_actv_exercise_intensity"
@@ -76,9 +77,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="12dp"
                 android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:layout_margin="12dp" >
+                android:orientation="vertical">
 
                 <!-- Standard calories -->
                 <LinearLayout
@@ -208,8 +209,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="12dp">
+                android:layout_margin="12dp"
+                android:orientation="vertical">
 
                 <!-- Number of exercises -->
                 <LinearLayout
