--- a/fitbook/app/src/main/res/layout/activity_share_new_post.xml
+++ b/fitbook/app/src/main/res/layout/activity_share_new_post.xml
@@ -97,6 +97,7 @@
                 android:textStyle="bold" />
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/share_new_post_til_post_content"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
