--- a/fitbook/app/src/main/res/values/arrays.xml
+++ b/fitbook/app/src/main/res/values/arrays.xml
@@ -41,4 +41,10 @@
         <item>1.9</item>
     </string-array>
 
+    <string-array name="post_filter">
+        <item>Mới nhất</item>
+        <item>Lượt thích cao nhất</item>
+        <item>Lượt bình luận nhiều nhất</item>
+    </string-array>
+
 </resources>
