--- a/fitbook/app/src/main/res/menu/activity_main_drawer.xml
+++ b/fitbook/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,10 +33,15 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_round_settings_24"
-            android:title="@string/menu_settings" />
+            android:title="@string/menu_settings"
+            android:visible="false"/>
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_menu_round_logout_24"
             android:title="@string/menu_logout" />
+        <item
+            android:id="@+id/nav_login"
+            android:icon="@drawable/ic_menu_round_login_24"
+            android:title="@string/menu_login" />
     </group>
 </menu>
