--- a/fitbook/app/src/main/res/layout/fragment_home.xml
+++ b/fitbook/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
     tools:context=".views.fragments.home.HomeFragment">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/schedule_ln_alert"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_home_alert_rounded"
@@ -24,12 +24,11 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/home_tv_alert"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:layout_weight="1"
-            android:text="Xem lịch tập hôm nay"
             android:textColor="#1D67AA"
             android:textSize="14sp"
             android:textStyle="bold" />
@@ -41,9 +40,22 @@
             android:backgroundTint="#1D67AA"
             android:paddingHorizontal="12dp"
             android:paddingVertical="8dp"
-            android:text="Kiểm tra"
+            android:text="@string/fragment_home_btn_check_schedule"
             android:textAllCaps="false"
             android:textSize="14sp"
+            app:cornerRadius="5dp" />
+
+        <Button
+            android:id="@+id/home_btn_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#1D67AA"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="8dp"
+            android:text="@string/fragment_home_btn_login"
+            android:textAllCaps="false"
+            android:textSize="14sp"
+            android:visibility="gone"
             app:cornerRadius="5dp" />
     </LinearLayout>
 
@@ -60,7 +72,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/schedule_ln_alert" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_rcv_exercise_list"
@@ -79,7 +91,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ProgressBar
             android:id="@+id/home_pb_loading"
