--- a/fitbook/app/src/main/res/layout/list_exercise_daily_item.xml
+++ b/fitbook/app/src/main/res/layout/list_exercise_daily_item.xml
@@ -22,7 +22,7 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:layout_weight="1"
             android:orientation="vertical">
