--- a/fitbook/app/src/main/res/layout/list_schedule_item.xml
+++ b/fitbook/app/src/main/res/layout/list_schedule_item.xml
@@ -68,6 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/roboto"
+            android:textAlignment="textEnd"
             android:textColor="#FF033503" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
